--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "PostGIS-Parks",
-  "description": "A simple mapping application for finding National Parks and Historic Sites, powered by postGIS and Leaflet maps",
+  "name": "Odpad-Praha8",
+  "description": "A simple mapping application for finding bulk waste containers in Prague 8",
   "version": "0.0.1",
   "private": true,
   "engines": {
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ryanj/restify-postGIS.git"
+    "url": "https://github.com/saxicek/odpad-praha8.cz.git"
   },
   "scripts": {
     "start": "node server.js",
