--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg-query": "~0.7.0",
     "pg": "~2.8.3",
     "request": "2.24.x",
-    "cheerio": "0.12.4"
+    "cheerio": "0.12.4",
+    "time": "0.10.x"
   },
   "devDependencies": {
     "mocha": "*",
