Another wannabe Bower configuration fix

--- a/.bowerrc
+++ b/.bowerrc
@@ -5,7 +5,6 @@
         "completion": ".bower/data/completion",
         "registry": ".bower/cache/registry",
         "empty": ".bower/data/empty",
-        "cache": ".bower/cache",
-        "config": ".bower/config"
+        "cache": ".bower/cache"
     }
 }
