--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,8 @@
     "jquery": "1.x",
     "bootstrap": "~3.1.1",
     "backbone": "~1.1.1",
-    "moment-timezone": "~0.0.3",
-    "moment": "~2.5.1",
+    "moment-timezone": "0.2.1",
+    "moment": "2.8.1",
     "requirejs": "~2.1.11",
     "requirejs-plugins": "~1.0.2"
   }
