--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
     "sinon": "1.7.3",
     "requirejs": "2.1.10",
     "bower": "1.2.8",
-    "migrate": "0.1.4"
+    "migrate": "0.1.4",
+    "grunt-cli": ">=0.1.13",
+    "grunt": "~0.4.5",
+    "grunt-contrib-requirejs": "~0.4.4",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-migrate": "0.0.1"
   },
   "repository": {
     "type": "git",
@@ -33,8 +39,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "HOME=$HOME/app-root/runtime bower install && r.js -o build-config.js",
-    "deploy": "migrate up",
+    "build": "HOME=$HOME/app-root/runtime bower install && grunt build",
+    "deploy": "grunt deploy",
     "test": "make all"
   },
   "main": "server.js"
