--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-migrate": "0.0.1"
+    "grunt-migrate": "0.0.1",
+    "grunt-mocha-test": "~0.11.0"
   },
   "repository": {
     "type": "git",
