--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "npm": "1.2.x"
   },
   "dependencies": {
-    "config": "0.4.x",
-    "requireindex": "1.0.x",
-    "restify": "2.5.x",
-    "pg-query": "~0.10.0",
-    "pg": "~2.8.3",
-    "request": "2.24.x",
-    "cheerio": "0.12.4",
+    "async": "0.9.0",
+    "cheerio": "0.17.0",
+    "config": "1.0.2",
     "dot": "1.0.2",
-    "async": "~0.9.0"
+    "pg": "3.4.1",
+    "pg-query": "0.10.1",
+    "request": "2.40.0",
+    "requireindex": "1.1.0",
+    "restify": "2.8.2"
   },
   "devDependencies": {
-    "mocha": "*",
-    "chai": "*",
-    "jshint": "2.3.0",
-    "sinon": "1.7.3",
+    "mocha": "1.21.4",
+    "chai": "1.9.1",
+    "jshint": "2.5.4",
+    "sinon": "1.10.3",
     "requirejs": "2.1.10",
-    "bower": "1.2.8",
+    "bower": "1.3.9",
     "migrate": "0.1.4",
     "grunt-cli": ">=0.1.13",
     "grunt": "~0.4.5",
