Implemented check for last successful scrape
Scraper can define minimum interval between each run. If run more frequently, scraping is skipped. Fixes #20.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "0.17.0",
     "config": "1.0.2",
     "dot": "1.0.2",
+    "moment": "2.8.2",
     "pg": "3.4.1",
     "pg-query": "0.10.1",
     "request": "2.40.0",
