--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-migrate": "0.0.1",
-    "grunt-mocha-test": "~0.11.0"
+    "grunt-mocha-test": "~0.11.0",
+    "grunt-concurrent": "~0.5.0",
+    "grunt-nodemon": "~0.3.0",
+    "grunt-node-inspector": "~0.1.5"
   },
   "repository": {
     "type": "git",
