--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
     "sinon": "1.10.3",
     "requirejs": "2.1.10",
     "bower": "1.3.9",
-    "migrate": "0.1.4",
     "grunt-cli": ">=0.1.13",
     "grunt": "~0.4.5",
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-migrate": "0.0.1",
     "grunt-mocha-test": "~0.11.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-nodemon": "~0.3.0",
-    "grunt-node-inspector": "~0.1.5"
+    "grunt-node-inspector": "~0.1.5",
+    "db-migrate": "0.7.1",
+    "grunt-db-migrate": "0.2.0"
   },
   "repository": {
     "type": "git",
