--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Odpad-Praha8",
   "description": "A simple mapping application for finding bulk waste containers in Prague 8",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "engines": {
     "node": "0.10.x",
@@ -36,7 +36,8 @@
     "grunt-nodemon": "~0.3.0",
     "grunt-node-inspector": "~0.1.5",
     "db-migrate": "0.7.1",
-    "grunt-db-migrate": "0.2.0"
+    "grunt-db-migrate": "0.2.0",
+    "grunt-bump": "0.0.15"
   },
   "repository": {
     "type": "git",
