Added Leaflet directly to container.js
Previously Leaflet.js was loaded from CDN which was causing issues. Now it may take longer to load app but it should be mitigated by planned gzip support.

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "moment-timezone": "0.2.1",
     "moment": "2.8.1",
     "requirejs": "~2.1.11",
-    "requirejs-plugins": "~1.0.2"
+    "requirejs-plugins": "~1.0.2",
+    "leaflet": "0.7.3",
+    "Leaflet.awesome-markers": "2.0.2"
   }
 }
