Added client side district validation
If place has related district then place location has to be inside of the district. If district is not defined, then place has to be in Prague bounding box. Fixes #23.

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "requirejs": "~2.1.11",
     "requirejs-plugins": "~1.0.2",
     "leaflet": "0.7.3",
+    "leaflet-pip": "0.1.0",
     "Leaflet.awesome-markers": "2.0.2"
   }
 }
