--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "prepublish": "HOME=$HOME/app-root/runtime bower install --config.interactive=false && grunt build",
+    "build": "HOME=$HOME/app-root/runtime bower install --config.interactive=false && grunt build",
     "deploy": "grunt deploy",
     "test": "make all"
   },
