--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,12 @@
   ],
   "dependencies": {
     "jquery": "1.x",
-    "bootstrap": "~3.1.1",
-    "backbone": "~1.1.1",
-    "moment-timezone": "0.2.1",
-    "moment": "2.8.1",
-    "requirejs": "~2.1.11",
-    "requirejs-plugins": "~1.0.2",
+    "bootstrap": "3.3.1",
+    "backbone": "1.1.1",
+    "moment-timezone": "0.2.5",
+    "moment": "2.8.4",
+    "requirejs": "2.1.15",
+    "requirejs-plugins": "1.0.2",
     "leaflet": "0.7.3",
     "leaflet-pip": "0.1.0",
     "Leaflet.awesome-markers": "2.0.2"
