--- a/package.json
+++ b/package.json
@@ -9,36 +9,36 @@
   },
   "dependencies": {
     "async": "0.9.0",
-    "cheerio": "0.17.0",
-    "config": "1.0.2",
+    "cheerio": "0.18.0",
+    "config": "1.8.1",
     "dot": "1.0.2",
-    "moment": "2.8.2",
-    "pg": "3.4.1",
+    "moment": "2.8.4",
+    "pg": "4.0.0",
     "pg-query": "0.10.1",
-    "request": "2.40.0",
+    "request": "2.48.0",
     "requireindex": "1.1.0",
-    "restify": "2.8.2"
+    "restify": "2.8.3"
   },
   "devDependencies": {
-    "mocha": "1.21.4",
-    "chai": "1.9.1",
-    "jshint": "2.5.4",
-    "sinon": "1.10.3",
-    "requirejs": "2.1.10",
-    "bower": "1.3.9",
+    "mocha": "2.0.1",
+    "chai": "1.10.0",
+    "jshint": "2.5.10",
+    "sinon": "1.12.1",
+    "requirejs": "2.1.15",
+    "bower": "1.3.12",
     "grunt-cli": ">=0.1.13",
     "grunt": "~0.4.5",
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-mocha-test": "~0.11.0",
-    "grunt-concurrent": "~0.5.0",
+    "grunt-mocha-test": "0.12.4",
+    "grunt-concurrent": "1.0.0",
     "grunt-nodemon": "~0.3.0",
     "grunt-node-inspector": "~0.1.5",
     "db-migrate": "0.7.1",
     "grunt-db-migrate": "0.2.0",
-    "grunt-bump": "0.0.15",
-    "grunt-contrib-copy": "0.6.0",
+    "grunt-bump": "0.0.16",
+    "grunt-contrib-copy": "0.7.0",
     "grunt-contrib-cssmin": "0.10.0"
   },
   "repository": {
