Added support for permanent containers
Container is permanent if it does not have specified time_from and time_to. Parsers for this type of containers should have set option removeExisting to true. Also added function to remove containers added by previous scrapes. Fixes #33.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "0.18.0",
     "config": "1.8.1",
     "dot": "1.0.2",
+    "lodash": "2.4.1",
     "moment": "2.8.4",
     "pg": "4.0.0",
     "pg-query": "0.10.1",
